--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.0.1",
+    "convert-excel-to-json": "^1.7.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -20,7 +21,8 @@
     "nodemailer": "^6.9.9",
     "pug": "^3.0.2",
     "sharp": "^0.33.2",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
