--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express-mongo-sanitize": "^2.2.0",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
+    "html-to-text": "^9.0.5",
     "http-status-codes": "^2.3.0",
     "joi": "^17.12.1",
     "jou": "^0.0.0",
